sample07-1 ビジネスを追加
Changes to be committed:
    modified:   index.html
    new file:   sample07-1/css/Normalize.css
    new file:   sample07-1/css/default.css
    new file:   sample07-1/css/fonts.css
    new file:   sample07-1/css/style.css
    new file:   sample07-1/images/banner.jpg
    new file:   sample07-1/images/pic01.jpg
    new file:   sample07-1/images/pic02.jpg
    new file:   sample07-1/images/pic03.jpg
    new file:   sample07-1/index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 	<a href="./sample06-1/index.html"" target="_blank" rel="noopener noreferrer">sample 6-1</a>
 	<a href="./sample06-2/index.html"" target="_blank" rel="noopener noreferrer">sample 6-2</a>
 	<a href="./sample06-3/index.html"" target="_blank" rel="noopener noreferrer">sample 6-3</a>
+	<p>サンプル7 ビジネス</p>
+	<a href="./sample07-1/index.html"" target="_blank" rel="noopener noreferrer">sample 7-1</a>
 
 </div>
 <div id="sub">
