トップページのsample01 カフェにレスポンシブWebサイトの明記を追加
Changes to be committed:
    modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="contents">
 <div id="main">
 	<h1>Welcome My Site</h1>
-	<p>サンプル1 カフェ</p>
+	<p>サンプル1 カフェ（レスポンシブWebサイト）</p>
 	<a href="./sample01/index.html"" target="_blank" rel="noopener noreferrer">sample 1</a>
 	<p>サンプル2 文房具購入サイト</p>
 	<a href="./sample02/index.html"" target="_blank" rel="noopener noreferrer">sample 2</a>
