sample07－2 ビジネスを追加
Changes to be committed:
    modified:   index.html
    new file:   sample07-2/css/Normalize.css
    new file:   sample07-2/css/style.css
    new file:   sample07-2/images/banner.jpg
    new file:   sample07-2/images/pic01.jpg
    new file:   sample07-2/images/pic02.jpg
    new file:   sample07-2/images/pic03.jpg
    new file:   sample07-2/index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<a href="./sample06-3/index.html"" target="_blank" rel="noopener noreferrer">sample 6-3</a>
 	<p>サンプル7 ビジネス</p>
 	<a href="./sample07-1/index.html"" target="_blank" rel="noopener noreferrer">sample 7-1</a>
+	<a href="./sample07-2/index.html"" target="_blank" rel="noopener noreferrer">sample 7-2(7-1をレスポンシブ化)</a>
 
 </div>
 <div id="sub">
