sample08 img要素の実験を追加
Changes to be committed:
    modified:   index.html
    new file:   sample08/css/Normalize.css
    new file:   sample08/css/style.css
    new file:   sample08/imgs/placeimg_640_480_animals.jpg
    new file:   sample08/index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 	<p>サンプル7 ビジネス</p>
 	<a href="./sample07-1/index.html"" target="_blank" rel="noopener noreferrer">sample 7-1</a>
 	<a href="./sample07-2/index.html"" target="_blank" rel="noopener noreferrer">sample 7-2(7-1をレスポンシブ化)</a>
-
+	<p>サンプル8 img要素の実験</p>
+	<a href="./sample08/index.html"" target="_blank" rel="noopener noreferrer">sample 8</a>
+	
 </div>
 <div id="sub">
 </div>
